# video-unscramble

./: .gitignore  LICENSE  README.md  cluster_frames.py  compute_optimal_sequence.py  estimate_matches_motion.py  execute_all.sh  execute_pipeline.sh  pyproject.toml  reconstruct_frames.py
src/video_unscramble/: __init__.py  __main__.py  cli.py  cluster_frames.py  compute_optimal_sequence.py  core.py  estimate_matches_motion.py  reconstruct_frames.py  visualization.py
utils/: create_dataset.py  generate_matches_motion_heatmaps.py
