[tool.poetry]
name = "video-unscramble"
version = "0.1.0"
description = "Unsupervised pipeline to extract, cluster, match and re‑order frames from a corrupted video."
authors = ["Aissam Djahnine <dreamerissame@gmail.com>"]
packages = [{ include = "video_unscramble", from = "src" }]

[tool.poetry.dependencies]
python = "3.10.10"
# OpenCV for video reading/writing and feature extraction
opencv-python = "^4.10"
# NumPy for efficient numerical arrays
numpy = ">=1.19"
# scikit-learn for clustering
scikit-learn = "^1.5.2"
tqdm = "^4.67.1"
psutil = "^7.0.0"
plotly = "^6.2.0"
pandas = "^2.3.1"
matplotlib = "^3.10.3"
pillow = "^11.3.0"
torch = "^2.7.0"
torchvision = "^0.22.0"
torchmetrics = "^1.7.4"

[tool.poetry.scripts]
video-unscramble = "video_unscramble.cli:main"



[tool.poetry.group.dev.dependencies]
# Development dependencies (optional).  Add formatting or testing tools here.


[build-system]
# Use poetry-core to build the package.  Dynamic versioning is optional and removed here for simplicity.
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
